Fix stars alignment

--- a/client/src/components/Posts/GamePost/GamePost.module.css
+++ b/client/src/components/Posts/GamePost/GamePost.module.css
@@ -93,7 +93,7 @@ p {
 
 .stars {
   margin: 0;
-  text-align: right;
+  text-align: center;
 }
 
 @media only screen and (max-width: 55em) {
